# Agent-Action-Guard

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  Dockerfile  LICENSE.md  MANIFEST.in  README.md  USAGE.md  evaluation_results-phi-4-mini-instruct.json  llms.txt  pyproject.toml  pytest.ini  requirements.txt  sitecustomize.py
.github/workflows/: publish-pypi.yml
agent_action_classifier/: __init__.py  action_classifier.py  chat_server.py  emb_nn_model.pt  eval_benchmark.py  server.py  train_nn.py  train_nn_hyperparam.py
agent_action_classifier/scripts/: chat_server.py  run_sample_query.py
agent_action_guard/: HarmActEval_dataset.json  HarmActions_dataset.json  __init__.py  _runtime.py  _runtime_utils.py  _utils.py  action_classifier.py  action_classifier_model.onnx  action_classifier_model.pt  agentharmbench.py  emb_nn_model.pt  eval_benchmark.py  harmacteval.py  harmactionsbench.py  harmactionseval.py  mcp_eval_server.py  train_nn.py  train_nn_hyperparam.py
agent_action_guard/scripts/: api_server.py  chat_server.py  host_models.py  run_sample_query.py  sample_mcp_server.py
assets/: Implementation.drawio  README.md  Workflow.drawio
docs/: USAGE.md
examples/: README.md  __init__.py  agentharmbench_mcp.py  example.py  example_query.py  harmacteval.py  harmacteval_mcp.py  mcp_eval_server.py
examples/scripts/: __init__.py  api_server.py  chat_server.py  host-llamacpp-embedding-model.sh  host-llamacpp-model.sh  host_embed_fastembed.py  host_models.py  run_sample_query.py  sample_mcp_server.py  test_latency.py
javascript/: Makefile  README.md  eslint.config.js  npm_publish.sh  package-lock.json  package.json  pnpm-lock.yaml
javascript/examples/: basic-usage.js
javascript/runtime-fixtures/: runtime-smoke.js  runtime-smoke.ts  runtime-suite.js  runtime-suite.ts
javascript/scripts/: test-all-versions.js
javascript/src/: action-classifier.js  index.js  runtime-utils.js
javascript/test/: action-classifier.test.js  cross-runtime.test.js  runtime-utils.test.js
python/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
python/agent_action_guard/: __init__.py  _runtime_utils.py  action_classifier.py  harmactionseval.py
python/examples/: example.py
python/examples/scripts/: host-llamacpp-embedding-model.sh  host_embed_fastembed.py  test_latency.py
python/scripts/: run_tests_uv_matrix.sh  test_dependency_matrix.py  test_integration.sh
python/tests/: test_action_classifier.py
python/training/: train_nn.py  train_nn_hyperparam.py
results/: aana_harmactions_eval.md  aana_harmactions_eval_summary.json
tests/: test_action_classifier.py  test_run_sample_query.py  test_train_nn.py
training/: __init__.py  train_nn.py  train_nn_hyperparam.py
